Fixing post visibility radio button alignment (#9539)

--- a/packages/editor/src/components/post-visibility/style.scss
+++ b/packages/editor/src/components/post-visibility/style.scss
@@ -4,6 +4,9 @@
 		margin-bottom: 1em;
 		margin-top: 0.5em;
 	}
+	.editor-post-visibility__dialog-radio {
+		margin-top: 2px;
+	}
 	.editor-post-visibility__dialog-label {
 		font-weight: 600;
 	}
